testData/src/error/java/ConstatnArgumentExample.java
/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */

/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */
package error.java;

/**
 * @author 吴昊
 * @since 1.3.1
 */
class ConstatnArgumentExample {

  public void test(String text) {
    showMeTheCode("");
    int count = 10;
    for (int i = 1; i < count; i++) {
      return;
    }
  }

  public void showMeTheCode(String text) {
  }

}

